--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: "lts/*"
 
 before_script:
-  - npm install -g gulp-cli link-checker
+  - npm install -g gulp-cli
 
 script:
   - gulp preview:build bundle:pack
